--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  color: white;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -14,7 +16,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #c6c6c6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
