--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,6 +27,19 @@
   color: #61dafb;
 }
 
+.table {
+  margin-left: auto;
+  margin-right: auto;
+  border: solid 1px black;
+}
+
+.table-header {
+    border-bottom: solid 2px black;
+    background: #c6c6c6;
+    color: black;
+    font-weight: bold;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
