--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,6 +38,13 @@
   border: solid 1px gray;
 }
 
+.table-cell input {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background: none;
+}
+
 .table-header {
     border-bottom: solid 2px black;
     background: #c6c6c6;
