--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -65,10 +65,19 @@
 }
 
 .table-header {
-    border-bottom: solid 2px black;
-    background: #c6c6c6;
-    color: black;
-    font-weight: bold;
+  background: #c6c6c6;
+  color: black;
+  font-weight: bold;
+  margin: 0 auto;
+  display: table;
+}
+
+.table-header-div {
+  display: table-cell;
+}
+
+.table-filter {
+  padding-top: 5px;
 }
 
 .table-row-Ride {
