--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,18 @@
   }
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .App-header {
   background-color: #c6c6c6;
   min-height: 100vh;
@@ -78,6 +90,7 @@
 
 .table-filter {
   padding-top: 5px;
+  height: 35px;
 }
 
 .table-row-Ride {
