--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -89,8 +89,12 @@ input[type=number] {
 }
 
 .table-filter {
-  padding-top: 5px;
-  height: 35px;
+  height: 45px;
+}
+
+.table-filter div {
+  display: flex;
+  padding: 10px 0;
 }
 
 .table-row-Ride {
