--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   color: white;
   background-color: #282c34;
+  width: max-content;
 }
 
 .App-logo {
@@ -86,6 +87,17 @@ input[type=number] {
 
 .table-header-div {
   display: table-cell;
+}
+
+.table textarea {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background: none;
+  resize: vertical;
+  font-size: xx-small;
+  width: 110px;
+  vertical-align: middle;
 }
 
 .table-filter {
