--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -93,6 +93,15 @@ input[type=number] {
   cursor: pointer;
   font-size: large;
   padding: 10px 0 10px 0;
+  opacity: 0;
+}
+
+.popover-body {
+  padding: 0;
+}
+
+.popover-arrow {
+  left: 10px !important;
 }
 
 .table textarea {
@@ -134,6 +143,12 @@ input[type=number] {
 
 .table-row-Swim {
   background: rgba(0, 191, 255, 0.75);
+}
+
+.table-row-clicked {
+  border-color: blue;
+  border-width: 2px;
+  box-shadow: inset 0 0 0 200px rgb(0 150 255 / 50%)
 }
 
 @keyframes App-logo-spin {
