--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,6 @@
   text-align: center;
   color: white;
   background-color: #282c34;
-  width: max-content;
 }
 
 .App-logo {
@@ -51,13 +50,15 @@ input[type=number] {
 }
 
 .table-cell {
-  padding: 10px;
+  padding: 0 !important;
   border: solid 1px gray;
+  vertical-align: middle;
 }
 
 .table-cell-not-valid {
   padding: 10px;
   border: solid 1px gray;
+  vertical-align: middle;
   background: orangered !important;
 }
 
@@ -67,6 +68,7 @@ input[type=number] {
   border: 0;
   background: none;
   width: 40px;
+  text-align: center;
 }
 
 .table-cell.speed input {
@@ -138,7 +140,7 @@ input[type=number] {
   background: none;
   resize: vertical;
   font-size: small;
-  width: 200px;
+  width: 195px;
   vertical-align: middle;
 }
 
@@ -174,8 +176,9 @@ input[type=number] {
 
 .table-row-week {
   background: rgba(76, 0, 0, 0.75);
-  height: 44px;
+  height: 40px;
   color: white;
+  vertical-align: middle;
 }
 
 .table-row-clicked {
@@ -196,4 +199,19 @@ input[type=number] {
 .login-spinner-div {
   padding: 300px 0;
   text-align: center;
+}
+
+.week-view-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.week-view-title {
+  font-size: xxx-large;
+}
+
+.week-view-header-empty-div {
+  width: 100px;
 }
